[package]
name = "rus_key"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# commands crate
string_commands = { version = "0.1.0", path = "./src/commands/string_commands" }
expired_commands = { version = "0.1.0", path = "./src/commands/expired_commands" }
config_commands = { version = "0.1.0", path = "./src/commands/config_commands" }
hashmap_commands = { version = "0.1.0", path = "src/commands/hashmap_commands" }
ping_commands = { version = "0.1.0", path = "src/commands/ping_commands" }
utils_commands = { version = "0.1.0", path = "src/commands/utils_commands" }
rus_key_command_lib = { version = "0.1.0", path = "./src/commands/command_lib" }
# lib crate
rus_key_db = { version = "0.1.0", path = "./src/db" }
rus_key_lib = { version = "0.1.0", path = "./src/lib" }
rus_key_trait = { version = "0.1.0", path = "./src/trait" }
rus_key_factory = { version = "0.1.0", path = "./src/factory" }

clap = { version = "4.4.6", features = ["derive"] }
regex = "1.9.6"
rustyline = "12.0.0"
tokio = { version = "1.32.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8.5"
bigdecimal = "0.4.2"

[dev.dependencies]
rusty-hook = "0.11.2"

[workspace]
members = [
    "src/db",
    "src/lib",
    "src/factory",
    "src/trait",
    "src/commands/command_lib",
    "src/commands/string_commands",
    "src/commands/expired_commands",
    "src/commands/config_commands",
    "src/commands/hashmap_commands",
    "src/commands/ping_commands",
    "src/commands/utils_commands",
]
