[package]
name = "expired_commands"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
# db crate
rus_key_db = { path = "../../db" }
# trait crate
rus_key_trait = { path = "../../trait" }
