[package]
name = "hashmap_commands"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# db crate
rus_key_db = { path = "../../db" }
# trait crate
rus_key_trait = { path = "../../trait" }
# command crate
expired_commands = { path = "../expired_commands" }
